# ABACOC

./: CMakeLists.txt  README.md  Tutorial.md
include/: ball.h  ballPredictor.h  distance.h  exhaustiveSearcher.h  maxBallPredictor.h  model.h  parameters.h  randomGenerator.h  searcher.h  utility.h
jvowels/test/: class1.txt  class2.txt  class3.txt  class4.txt  class5.txt  class6.txt  class7.txt  class8.txt  class9.txt
jvowels/train/: class1.txt  class2.txt  class3.txt  class4.txt  class5.txt  class6.txt  class7.txt  class8.txt  class9.txt
src/: ball.cpp  distance.cpp  exhaustiveSearcher.cpp  main.cpp  maxBallPredictor.cpp  model.cpp  parameters.cpp  randomGenerator.cpp  utility.cpp
